fix 404 page on smaller devices

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -9,6 +9,7 @@ html,
 body {
   /* CSS vars */
   --accent: #f6bc3f;
+  --dimmed-accent: #c39636;
 
   font-family: "Ubuntu", sans-serif;
   background-color: #fff;
